--- a/gradle.properties
+++ b/gradle.properties
@@ -16,16 +16,16 @@ show_testing_output = false
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
 mod_version = 0.1.5
-root_package = com.sing.legacycompletion
-mod_id = legacy_completion
-mod_name = Legacy Completion
+root_package = com.canoestudio.legacycommandcore
+mod_id = legacy_command_core
+mod_name = Legacy Comman Core
 
 # Mod Metadata (Optional)
 mod_description =
 mod_url =
 mod_update_json =
 # Delimit authors with commas
-mod_authors =MQ-sing
+mod_authors =MQ-sing,CanoeStudio
 mod_credits =
 mod_logo_path =
 
@@ -117,7 +117,7 @@ mixin_refmap = mixins.${mod_id}.refmap.json
 # You MUST state a class name for `coremod_plugin_class_name` if you are making a coremod, the class should implement `IFMLLoadingPlugin`
 is_coremod = true
 coremod_includes_mod = true
-coremod_plugin_class_name =com.sing.legacycompletion.mixins.MixinInit
+coremod_plugin_class_name =mixins.com.canoestudio.legacycommandcore.MixinInit
 
 # AssetMover
 # Convenient way to allow downloading of assets from official vanilla Minecraft servers, CurseForge, or any direct links
